fix problem with overflow and burger menu

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
   font-family: 'Noto Sans JP', sans-serif;
   overflow-x: hidden;
+  /* overflow-y: hidden; */
 }
 
 .main-info {
@@ -54,27 +55,23 @@ body {
 
 .hamburger {
   position: absolute;
-  z-index: 5;
-  right: 480px;
-  /* nimation: hamburger 1s ease-in-out forwards; */
-  top: 10px;
+  z-index: 4;
+  cursor: pointer;
+  top: 20px;
+  right: 10px;
 }
-
-/* .hamburger-active {
-  position: absolute;
-  /* animation: hamburgerActive 1s ease-in-out forwards; */
-  /* top: 10px;} */
 
 .line1,
 .line2 {
+  display: block;
   height: 4px;
   width: 40px;
   background-color: rgb(0, 0, 0);
-  margin-bottom: 3px;
+  margin-bottom: 5px;
 }
 
 .line1-active {
-  transform: rotate(-45deg) translateY(4px) translateX(-3px);
+  transform: rotate(-45deg) translateY(5px) translateX(-5px);
   transition: transform 0.5s ease-in-out;
 }
 
@@ -84,22 +81,25 @@ body {
 }
 
 .library {
-  height: 100%;
   width: 30%;
   position: absolute;
+  top: 0;
+  bottom: 0;
   right: 0;
-  background-color: rgb(252, 55, 94);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(117,175,98,1) 39%, rgba(55,132,48,1) 69%, rgba(12,99,17,1) 100%);  
   z-index: 3;
   transform: translateX(460px);
   transition: transform 1s ease-in-out;
-  overflow-x: visible;
+  overflow-y: scroll;
 }
 
 .library-active {
   transform: translateX(0px);
   transition: transform 1s ease-in-out;
-  /* overflow-y: scroll; */
-  /* overflow-x: visible; */
+}
+
+.library-recipes {
+  margin-top: 60px;
 }
 
 .saved-recipe {
@@ -204,8 +204,7 @@ body {
 
 .recipe-img {
   width: 30%;
-  height: 50%;
-  background-size: cover;
+  height: 40%;
   margin: 15px 20px;
 }
 
@@ -264,12 +263,14 @@ body {
   display: flex;
   flex-direction: row;
   font-size: 1.5rem;
-}
-
-.transfer-recipe button {
   background: none;
   border: none;
   outline: none;
+  cursor: pointer;
+}
+
+.fa-plus {
+  pointer-events: none;
 }
 
 .recipe-nutrition {
@@ -291,7 +292,7 @@ body {
   padding: 3px 70px;
   background-color: rgba(255, 0, 0, 0.685);
   border-radius: 5px;
-  z-index:5;
+  z-index:2;
   margin-top: -50px;
   transform: rotate(40deg);
 }
@@ -369,9 +370,9 @@ body {
   .nutrition-fact {
     margin: 0;
   }
-  .hamburger {
-    right: 400px;
-  }
+  /* .hamburger {
+    right: 170px;
+  } */
 }
 
 @media (max-width: 1140px) {
